feat: generate store targeting personnel types
